[package]
name = "cat-tracker"
version = "0.1.0"
edition = "2024"
default-run = "cat-tracker"

[workspace]

# The main executable of your application
[[bin]]
name = "cat-tracker"
path = "src/main.rs"

# A custom made log reader application for your application.
[[bin]]
name = "cat-tracker-logreader"
path = "src/logreader.rs"
required-features = ["logreader"]

[features]
default = []
logreader = ["dep:cu29-export"]

[dependencies]
cu29 = "0.13"
ort = { version = "2.0.0-rc.11", features = ["load-dynamic"]}
bincode = { package = "cu-bincode", version = "2.0", default-features = false, features = ["derive", "alloc"] }
serde = { version = "*", features = ["derive"] }
cu29-helpers = "0.13"
cu29-export = { version = "0.13" , optional = true }